# Aegir-Eiders-Lightning-Lance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sw_arch_reqs_bootstrap_notes.md
docs/: architecture.md  data_foundation_lance.md  sam2_troubleshooting.md
docs/lance/: geospatial_embeddings_and_vector_search  lanceDB_vs_lakehouse_role.md
notebooks/: 00_ducklake_fetch_demo.ipynb  01_mask_factory_demo.ipynb  02_lance_training_data_browser.ipynb  03_training_smp_baselines.ipynb  04_yolo_baseline_prep_and_eval.ipynb  05_inference_and_validation_loop.ipynb
src/dataflows/: ingest_ducklake_labels.py  lance_writer.py  s2_indexing.py  sam_mask_factory.py  spectral_indices.py  training_sample_builder.py  vhr_core_five_loader.py  vhr_satellogic_earthview_loader.py
src/store/: lance_io.py
src/training/: datamodule.py  litmodule.py  yolo_baseline.py
src/utils/: geo.py  types.py
