[project]
name = "aegir-eiders-lightning-lance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask==2025.5.0",
    "datasets>=4.0.0",
    "duckdb==1.4.0",
    "fsspec==2025.3.0",
    "geopandas>=1.0",
    "graphviz~=0.21",
    "h3>=4.1.2",
    "h5netcdf>=1.3",
    "huggingface-hub>=0.24",
    "ibis-framework[duckdb,geospatial]>=10.8.0",
    "ipykernel==6.17.1",
    "ipywidgets~=8.1.7",
    "jupyter-client>=5.3.4,<8",
    "lancedb>=0.20.0",
    "lightning>=2.4",
    "numpy>=1.26",
    "obstore~=0.8.2",
    "pandas>=2.2.0",
    "pyarrow>=14.0.0,<20.0.0a0",
    "pylance>=0.22.0",
    "python-dotenv~=1.1.1",
    "s2cell>=1.7",
    "s2sphere>=0.2.5",
    "s3fs>=2024.12.0",
    "segment-geospatial[samgeo2]==0.13.0",
    "segmentation-models-pytorch>=0.3",
    "sf-hamilton>=1.85.0",
    "shapely>=2.0.7",
    "torchvision>=0.21.0",
    "tqdm>=4.66",
    "virtualizarr~=2.1.2",
    "wandb>=0.19.0",
    "xarray[io]>=2024.6",
    "zarr>=2.16",
]

[dependency-groups]
dev = []
